--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -606,9 +606,9 @@
     <string name="add">Add</string>
 
     <!-- Title of the Settings activity shown within the application itself. -->
-    <string name="settings_label">Settings</string>
+    <string name="settings_label">RvOS Settings</string>
     <!-- Title of the Settings activity shown in the Launcher. [CHAR LIMIT=20] -->
-    <string name="settings_label_launcher">Settings</string>
+    <string name="settings_label_launcher">RvOS Settings</string>
     <!-- Label for option to select a settings panel as a shortcut -->
     <string name="settings_shortcut">Settings shortcut</string>
     <!-- Wireless controls settings screen, setting check box label -->
@@ -8629,7 +8629,7 @@
 
     <!--Dashboard strings-->
     <!-- Text to describe the dashboard fragment title [CHAR LIMIT=16] -->
-    <string name="dashboard_title">Settings</string>
+    <string name="dashboard_title">RvOS Settings</string>
     <!-- Text to describe the items to be expanded as suggested settings [CHAR LIMIT=none] -->
     <plurals name="settings_suggestion_header_summary_hidden_items">
         <item quantity="one">Show %d hidden item</item>
